--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@
 #    pip-compile requirements.in
 #
 click==7.0                # via flask
-flask-cors==3.0.8
-flask==1.1.1
-gunicorn==19.9.0
+flask-cors==3.0.8         # via -r requirements.in
+flask==1.1.1              # via -r requirements.in, flask-cors
+gunicorn==19.9.0          # via -r requirements.in
 itsdangerous==1.1.0       # via flask
 jinja2==2.10.3            # via flask
 markupsafe==1.1.1         # via jinja2
-six==1.12.0               # via flask-cors
+python-memcached==1.59    # via -r requirements.in
+six==1.12.0               # via flask-cors, python-memcached
 werkzeug==0.16.0          # via flask
