--- a/requirements.txt
+++ b/requirements.txt
@@ -4,39 +4,41 @@
 #
 #    pip-compile
 #
-certifi==2022.9.24
+certifi==2022.12.7
     # via requests
 charset-normalizer==2.1.1
     # via requests
-click==7.1.2
+click==8.1.3
     # via flask
-flask==1.1.2
+flask==2.2.2
     # via
     #   -r requirements.in
     #   flask-cors
 flask-cors==3.0.10
     # via -r requirements.in
-gunicorn==20.0.4
+gunicorn==20.1.0
     # via -r requirements.in
 idna==3.4
     # via requests
-itsdangerous==1.1.0
+itsdangerous==2.1.2
     # via flask
-jinja2==2.11.3
+jinja2==3.1.2
     # via flask
-markupsafe==1.1.1
-    # via jinja2
+markupsafe==2.1.1
+    # via
+    #   jinja2
+    #   werkzeug
 python-memcached==1.59
     # via -r requirements.in
 requests==2.28.1
     # via -r requirements.in
-six==1.15.0
+six==1.16.0
     # via
     #   flask-cors
     #   python-memcached
 urllib3==1.26.13
     # via requests
-werkzeug==1.0.1
+werkzeug==2.2.2
     # via flask
 
 # The following packages are considered to be unsafe in a requirements file:
