--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ markupsafe==2.1.2
     # via
     #   jinja2
     #   werkzeug
+pycountry==22.3.5
+    # via -r requirements.in
 python-memcached==1.59
     # via -r requirements.in
 requests==2.28.2
