--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,8 @@ pycountry==22.3.5
     # via -r requirements.in
 python-memcached==1.59
     # via -r requirements.in
+pyyaml==6.0
+    # via -r requirements.in
 requests==2.28.2
     # via -r requirements.in
 six==1.16.0
