adapt scripts after moving metashare files to git

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Static files and metadata
-meta-share
+metadata
 metadata_api/static/collection.json
 metadata_api/static/corpus.json
 metadata_api/static/lexicon.json
 metadata_api/static/model.json
 metadata_api/static/resource-texts.json
-yaml
 logs
 .svn/
 list-resources
