--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,21 @@
 #
 #    pip-compile
 #
-certifi==2022.12.7
-    # via requests
-charset-normalizer==3.0.1
-    # via requests
-click==8.1.3
+blinker==1.6.2
     # via flask
-flask==2.2.3
+certifi==2023.7.22
+    # via requests
+charset-normalizer==3.3.0
+    # via requests
+click==8.1.7
+    # via flask
+flask==3.0.0
     # via
     #   -r requirements.in
     #   flask-cors
-flask-cors==3.0.10
+flask-cors==4.0.0
     # via -r requirements.in
-gunicorn==20.1.0
+gunicorn==21.2.0
     # via -r requirements.in
 idna==3.4
     # via requests
@@ -24,27 +26,27 @@ itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-lxml==4.9.2
+lxml==4.9.3
     # via -r requirements.in
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via
     #   jinja2
     #   werkzeug
+packaging==23.2
+    # via gunicorn
 pycountry==22.3.5
     # via -r requirements.in
 python-memcached==1.59
     # via -r requirements.in
-pyyaml==6.0
+pyyaml==6.0.1
     # via -r requirements.in
-requests==2.28.2
+requests==2.31.0
     # via -r requirements.in
 six==1.16.0
-    # via
-    #   flask-cors
-    #   python-memcached
-urllib3==1.26.14
+    # via python-memcached
+urllib3==2.0.6
     # via requests
-werkzeug==2.2.3
+werkzeug==3.0.0
     # via flask
 
 # The following packages are considered to be unsafe in a requirements file:
