--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ flask==3.0.3
     #   flask-cors
 flask-cors==5.0.0
     # via -r requirements.in
+gitdb==4.0.12
+    # via gitpython
+gitpython==3.1.44
+    # via -r requirements.in
 gunicorn==23.0.0
     # via -r requirements.in
 idna==3.10
@@ -62,6 +66,8 @@ rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
+smmap==5.0.2
+    # via gitdb
 soupsieve==2.6
     # via beautifulsoup4
 urllib3==2.2.3
