--- a/metadata_api/static/apidoc.yaml
+++ b/metadata_api/static/apidoc.yaml
@@ -22,7 +22,7 @@ info:
     url: https://opensource.org/licenses/MIT
 
 servers:
-  - url: https://ws.spraakbanken.gu.se/ws/metadata
+  - url: https://ws.spraakbanken.gu.se/ws/metadata/v3
     description: Production server
 
 tags:
