--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 ]
 dependencies = [
     "beautifulsoup4>=4.14.2",
+    "celery[redis]>=5.5.3",
     "flask>=3.1.2",
     "flask-cors>=6.0.1",
     "gitpython>=3.1.45",
@@ -20,6 +21,7 @@ dependencies = [
     "pycountry>=24.6.1",
     "pymemcache>=4.0.0",
     "pyyaml>=6.0.3",
+    "redis>=5.2.1",
     "requests>=2.32.5",
 ]
 
