--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,7 @@ config.py
 
 # Static files and metadata
 metadata
-metadata_api/static/collection.json
-metadata_api/static/corpus.json
-metadata_api/static/lexicon.json
-metadata_api/static/model.json
-metadata_api/static/analysis.json
-metadata_api/static/utility.json
-metadata_api/static/resource-texts.json
+metadata_api/static/*.json
 logs
 .svn/
 
