--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,10 @@ authors = [
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "celery[redis]>=5.5.3",
-    "flask>=3.1.2",
-    "flask-cors>=6.0.1",
-    "gevent>=25.9.1",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.30.0",
+    "pydantic-settings>=2.7.0",
     "gitpython>=3.1.45",
-    "gunicorn>=23.0.0",
     "jsonschema>=4.25.1",
     "lxml>=6.0.2",
     "markdown>=3.10",
