--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "metadata-api"
-version = "3.2.0"
+version = "3.3.0.dev"
 description = ""
 readme = "README.md"
 requires-python = ">=3.11"
