--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ authors = [
     { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }
 ]
 dependencies = [
-    "beautifulsoup4>=4.14.2",
-    "celery[redis]>=5.5.3",
-    "fastapi>=0.115.0",
-    "uvicorn[standard]>=0.30.0",
-    "pydantic-settings>=2.7.0",
+    "beautifulsoup4>=4.14.3",
+    "celery[redis]>=5.6.0",
+    "fastapi>=0.125.0",
+    "uvicorn[standard]>=0.38.0",
+    "pydantic-settings>=2.12.0",
     "gitpython>=3.1.45",
     "jsonschema>=4.25.1",
     "lxml>=6.0.2",
@@ -21,7 +21,7 @@ dependencies = [
     "pycountry>=24.6.1",
     "pymemcache>=4.0.0",
     "pyyaml>=6.0.3",
-    "redis>=5.2.1",
+    "redis~=6.0",
     "requests>=2.32.5",
 ]
 
